package hw01;

public class Being{
    int location_x;
    int location_y;
}